# openstack-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  release-deploy.yml  tests.yml
app/: _dev.py  config.py  dependencies.py  exceptions.py  main.py
app/models/: vm.py
app/routers/: vms.py
app/services/: openstack_service.py
helm/openstack-vm-manager/: Chart.yaml  values.yaml
helm/openstack-vm-manager/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
scripts/: export-credentials.sh  openstack-setup.sh
tests/: conftest.py  test_auth.py  test_main.py  test_service.py  test_vms.py
